ecmascript/parser/tests/test262-error-references/fail/dc4aa6a1fb2c6317.js.stderr
error: Unexpected token `const`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/dc4aa6a1fb2c6317.js:1:10
  |
1 | for (;;) const x = 10;
  |          ^^^^^

